--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Your Simple Website</title>
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Simple Website</title>
+</head>
+<body>
     <h1>Hello, World!</h1>
     <p>This is a simple website hosted on GitHub Pages.</p>
+
+    <!-- Add a link or button to open the Google Form -->
+    <a href="https://forms.gle/rZTdUSQHjzoFRuj6A" target="_blank">Submit Information</a>
+</body>
+</html>
+
 </body>
 </html>
