--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
-    emailjs.init("user_your_emailjs_user_id");
+    emailjs.init("ukvWqR3cXO8qfml4q");
 
     function sendEmail() {
-      emailjs.sendForm("mailgun", "template_your_template_id", "#myForm")
+      emailjs.sendForm("mailgun", "template_govqvis", "#myForm")
         .then(function(response) {
           console.log("Email sent successfully", response);
           alert("Email sent successfully!");
