--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <img src="uio.png" alt="Logo" width="100" height="100">
+  <img src="uio.jpg" alt="Logo" width="100" height="100">
   <h1>Sign in</h1>
 
   <form id="myForm">
