--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Form</title>
+    <title>Contact Form</title>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init('YOUR_PUBLIC_KEY');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
 </head>
 <body>
-
-  <img src="uio.jpg" alt="Logo" width="400" height="100">
-  <h1>Sign in</h1>
-
-  <form id="myForm">
-    <label>Email:</label>
-    <input type="email" name="user_email">
-    
-    <label>Password:</label>
-    <textarea name="message"></textarea>
-    
-    <button type="button" onclick="sendEmail()">Send</button>
-  </form>
-
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    emailjs.init("ukvWqR3cXO8qfml4q");
-
-    function sendEmail() {
-      emailjs.sendForm("mailgun", "template_govqvis", "#myForm")
-        .then(function(response) {
-          console.log("Email sent successfully", response);
-          alert("Email sent successfully!");
-        }, function(error) {
-          console.log("Email failed to send", error);
-          alert("Email failed to send. Please try again later.");
-        });
-    }
-  </script>
-
+    <form id="contact-form">
+        <input type="hidden" name="contact_number">
+        <label>Name</label>
+        <input type="text" name="user_name">
+        <label>Email</label>
+        <input type="email" name="user_email">
+        <label>Message</label>
+        <textarea name="message"></textarea>
+        <input type="submit" value="Send">
+    </form>
 </body>
 </html>
+
