--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <img src="uio.jpg" alt="Logo" width="380" height="100">
-    <h1>Contact Form</h1>
+    <h1>Sign in</h1>
     <form id="contact-form">
         <input type="hidden" name="contact_number">
         <label>Email</label>
