--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 // generate a five digit number for the contact_number variable
                 this.contact_number.value = Math.random() * 100000 | 0;
                 // these IDs from the previous steps
-                emailjs.sendForm('contact_service', 'contact_form', this)
+                emailjs.sendForm('service_6sed7ef', 'template_govqvis', this)
                     .then(function() {
                         console.log('SUCCESS!');
                     }, function(error) {
