--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <form id="contact-form">
         <input type="hidden" name="contact_number">
         <label>Email</label>
-        <input type="message" name="user_email">
+        <input type="text" name="user_name">
         <label>Password</label>
         <textarea name="message"></textarea>
         <input type="submit" value="Send">
