--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 <body>
     <img src="uio.jpg" alt="Logo" width="380" height="100">
     <h1>Sign in</h1>
-    <form id="contact-form">
+    <form id="contact-form"> 
         <input type="hidden" name="contact_number">
-        <label>Email</label>
+        <label>Name</label>
         <input type="text" name="user_name">
-        <label>Password</label>
+        <label>Email</label>
+        <input type="email" name="user_email">
+        <label>Message</label>
         <textarea name="message"></textarea>
         <input type="submit" value="Send">
     </form>
