--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input type="hidden" name="contact_number">
         <label>Email</label>
         <input type="email" name="user_email">
-        <label>Message</label>
+        <label>Password</label>
         <textarea name="message"></textarea>
         <input type="submit" value="Send">
     </form>
